# isaac_ros_dnn_inference

./: .gitattributes  README.md
docs/: model-preparation.md  tensorrt-and-triton-info.md  troubleshooting.md
isaac_ros_dnn_encoders/: CMakeLists.txt  package.xml
isaac_ros_dnn_encoders/config/: dnn_image_encoder_node.yaml  namespace_injector_rule.yaml
isaac_ros_dnn_encoders/include/isaac_ros_dnn_encoders/: dnn_image_encoder_node.hpp
isaac_ros_dnn_encoders/src/: dnn_image_encoder_main.cpp  dnn_image_encoder_node.cpp
isaac_ros_dnn_encoders/test/: isaac_ros_dnn_image_encoder_image_norm_test.py  isaac_ros_dnn_image_encoder_image_resize_test.py  isaac_ros_dnn_image_encoder_test.py
isaac_ros_dnn_image_encoder/: CMakeLists.txt  package.xml
isaac_ros_dnn_image_encoder/config/: dnn_image_encoder_node.yaml  namespace_injector_rule.yaml
isaac_ros_dnn_image_encoder/include/isaac_ros_dnn_image_encoder/: dnn_image_encoder_node.hpp
isaac_ros_dnn_image_encoder/launch/: dnn_image_encoder.launch.py  dnn_image_encoder_nodes.launch.py
isaac_ros_dnn_image_encoder/src/: dnn_image_encoder_node.cpp
isaac_ros_dnn_image_encoder/test/: dnn_image_encoder_node_test.cpp  isaac_ros_dnn_image_encoder_image_crop_test.py  isaac_ros_dnn_image_encoder_image_norm_test.py  isaac_ros_dnn_image_encoder_launch_test.py  isaac_ros_dnn_image_encoder_separate_nodes_test.py  isaac_ros_dnn_image_encoder_test.py
isaac_ros_dnn_inference_test/: CMakeLists.txt  package.xml
isaac_ros_dnn_inference_test/include/isaac_ros_dnn_inference_test/: test_tensor_publisher_node.hpp
isaac_ros_dnn_inference_test/src/: test_tensor_publisher_main.cpp  test_tensor_publisher_node.cpp
isaac_ros_dope/: CMakeLists.txt  package.xml
isaac_ros_dope/scripts/: dope_pytorch2onnx.py
isaac_ros_gxf_extensions/gxf_isaac_tensor_rt/: CMakeLists.txt  package.xml
isaac_ros_gxf_extensions/gxf_isaac_tensor_rt/gxf/extensions/tensor_rt/: tensor_rt_extension.cpp  tensor_rt_inference.cpp  tensor_rt_inference.hpp
isaac_ros_gxf_extensions/gxf_isaac_triton/: CMakeLists.txt  package.xml
isaac_ros_gxf_extensions/gxf_isaac_triton/nvds/include/: infer_custom_process.h  infer_datatypes.h  infer_defines.h  infer_icontext.h  infer_ioptions.h  infer_options.h  infer_post_datatypes.h  nvdsinfer.h  nvdsinferserver_common.proto  nvdsinferserver_config.proto  nvdsinferserver_plugin.proto
isaac_ros_gxf_extensions/gxf_isaac_triton/nvds/lib/gxf_aarch64_cuda_13_0/: libnvbuf_fdmap.so.1.0.0  libnvbufsurface.so.1.0.0  libnvbufsurftransform.so.1.0.0
isaac_ros_tensor_proc/: CMakeLists.txt  package.xml
isaac_ros_tensor_proc/config/: interleaved_to_planar_node.yaml  namespace_injector_rule_interleaved_to_planar.yaml  namespace_injector_rule_normalizer.yaml  namespace_injector_rule_reshaper.yaml  normalizer_node.yaml  reshape_node.yaml
isaac_ros_tensor_proc/include/isaac_ros_tensor_proc/: image_tensor_normalize_node.hpp  image_to_tensor_node.hpp  interleaved_to_planar_node.hpp  normalize_node.hpp  reshape_node.hpp  tensor_pair_sync_node.hpp
isaac_ros_tensor_proc/src/: image_tensor_normalize_node.cpp  image_to_tensor_node.cpp  interleaved_to_planar_node.cpp  normalize_node.cpp  reshape_node.cpp  tensor_pair_sync_node.cpp
isaac_ros_tensor_proc/test/: interleaved_to_planar_node_test.cpp  isaac_ros_image_tensor_normalize_test.py  isaac_ros_image_to_tensor_no_scale.py  isaac_ros_image_to_tensor_no_scale_float_test.py  isaac_ros_image_to_tensor_test.py  isaac_ros_interleaved_to_planar_test.py  isaac_ros_normalize_test.py  isaac_ros_reshape_test.py  normalize_node_test.cpp
isaac_ros_tensor_proc/test/test_cases/pose_estimation_0/: camera_info.json
isaac_ros_tensor_rt/: CMakeLists.txt  package.xml
isaac_ros_tensor_rt/config/: isaac_ros_tensor_rt.yaml  namespace_injector_rule.yaml  tensor_rt_inference.yaml
isaac_ros_tensor_rt/gxf/tensor_rt/: CMakeLists.txt  tensor_rt_extension.cpp  tensor_rt_inference.cpp  tensor_rt_inference.hpp
isaac_ros_tensor_rt/include/isaac_ros_tensor_rt/: tensor_rt_node.hpp
isaac_ros_tensor_rt/launch/: isaac_ros_tensor_rt.launch.py  isaac_ros_tensor_rt.py
isaac_ros_tensor_rt/src/: tensor_rt_node.cpp
isaac_ros_tensor_rt/test/: isaac_ros_tensor_rt_test.py  tensor_rt_node_test.cpp
isaac_ros_triton/: CMakeLists.txt  package.xml
isaac_ros_triton/bazel_config/: triton_node.yaml
isaac_ros_triton/config/: namespace_injector_rule.yaml  triton_inference.yaml  triton_node.yaml
isaac_ros_triton/gxf/lib/gxf_jetpack50/triton/: libnvbuf_fdmap.so.1.0.0
isaac_ros_triton/gxf/triton/: CMakeLists.txt  triton_ext.cpp  triton_inference_request.cpp  triton_inference_request.hpp  triton_inference_response.cpp  triton_inference_response.hpp  triton_scheduling_terms.cpp  triton_scheduling_terms.hpp
isaac_ros_triton/gxf/triton/extensions/triton/: triton_options.hpp  triton_server.cpp  triton_server.hpp
isaac_ros_triton/gxf/triton/inferencers/: triton_inferencer_impl.cpp  triton_inferencer_impl.hpp  triton_inferencer_interface.hpp
isaac_ros_triton/gxf/triton/nvds/include/: infer_custom_process.h  infer_datatypes.h  infer_defines.h  infer_icontext.h  infer_ioptions.h  infer_options.h  infer_post_datatypes.h  nvdsinferserver_common.proto  nvdsinferserver_config.proto  nvdsinferserver_plugin.proto
isaac_ros_triton/include/isaac_ros_triton/: triton_node.hpp
isaac_ros_triton/include/isaac_ros_triton_node/: triton_node.hpp
isaac_ros_triton/launch/: isaac_ros_triton.launch.py  isaac_ros_triton.py
isaac_ros_triton/src/: triton_node.cpp
isaac_ros_triton/test/: isaac_ros_triton_test_onnx.py  isaac_ros_triton_test_tf.py  triton_node_test.cpp
isaac_ros_triton/test/models/mobilenetv2-1.0_triton_onnx/: config.pbtxt
isaac_ros_unet/: CMakeLists.txt  package.xml
isaac_ros_unet/include/isaac_ros_unet/: unet_decoder_node.hpp
isaac_ros_unet/launch/: isaac_ros_unet_tensor_rt_launch.py  isaac_ros_unet_triton_launch.py
isaac_ros_unet/src/: unet_decoder_node.cpp
isaac_ros_unet/test/: isaac_ros_unet_pol_test.py
isaac_ros_unet/test/dummy_model/: model.dummy.onnx
resources/: peoplesemsegnet_shuffleseg_config.pbtxt
(+3 files in other folders)
