<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_dnn_encoders</name>
  <version>0.9.0</version>
  <description>Encoders for preprocessing before running deep learning inference</description>
  <maintainer email="hemals@nvidia.com">Hemal Shah</maintainer>
  <license>Jetpack EULA</license>
  <url type="website">https://developer.nvidia.com/blog/accelerating-ai-modules-for-ros-and-ros-2-on-jetson/</url>
  <author>Ethan Yu</author>
  <author>Kajanan Chinniah</author>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>isaac_ros_nvengine_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>